--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.1.3",
+    "gsap": "^3.10.4",
     "jquery": "^3.6.0",
+    "node-sass": "^7.0.1",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-countdown": "^2.3.2",
     "react-dom": "^18.1.0",
+    "react-gsap": "^3.2.1",
     "react-parallax": "^3.5.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
