--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "bee-nft-react",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  },
   "dependencies": {
     "@fullpage/react-fullpage": "^0.1.26",
     "@testing-library/jest-dom": "^5.16.4",
